--- a/java.html
+++ b/java.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>sweet</title>
+	<title>ssss</title>
 	<style >
 		canvas{
 			border: 1px solid #000;
