--- a/huantu.html
+++ b/huantu.html
@@ -4,31 +4,31 @@
 	<title>image</title>
 	<meta charset="utf-8">
 	<style>	
-		body{
-			font-family:"Helvetica","Arial",serif;
-			color:#333;
-			background-color:#ccc;
-			margin:1em 10%;
+		body {
+			font-family: Helvetica, Arial, serif;
+			color: #333;
+			background-color: #ccc;
+			margin: 1em 10%;
 		}
-		h1{
-			color:#333;
+		h1 {
+			color: #333;
 			background-color: transparent;
 		}
-		a{
+		a {
 			color: #c60;
 			background-color: transparent;
 			font-weight: bold;
 			text-decoration: none;
 		}
-		ul{
-			padding:0;
+		ul {
+			padding: 0;
 		}
-		li{
+		li {
 			float: left;
 			padding: 1em;
 			list-style: none;
 		}
-		img{
+		img {
 			display: block;
 			clear: both;
 		}
@@ -60,14 +60,14 @@
 			var text = dizhi.getAttribute("title");
 			var description = document.getElementById("description");
 			description.firstChild.nodeValue = text;
-			zhanwei.setAttribute("src",tihuan);
-		};
+			zhanwei.setAttribute("src", tihuan);
+		}
 		function countBodyChildren() {
 			var bodyElement = document.getElementsByTagName("body")[0];
 				//alert (bodyElement.childNodes.length);
 				//alert (bodyElement.nodeType);
-			};
-			window.onload = countBodyChildren;
+		}
+		window.onload = countBodyChildren;
 		</script>
 	</body>
 	</html>
