--- a/biaogexiaoguo/table-yinyangtiaowen.html
+++ b/biaogexiaoguo/table-yinyangtiaowen.html
@@ -31,7 +31,7 @@
 	</table>
 	
 	<script >
-		unction stripeTables() {
+		function stripeTables() {
 	if (!document.getElementsByTagName) return false;
 	var tables = document.getElementsByTagName("table");
 	
