--- a/moveElement/slide show.html
+++ b/moveElement/slide show.html
@@ -56,6 +56,9 @@
 			if ( !document.getElementById) return false;
 			if ( !document.getElementById(elementID)) return false;
 			var elem = document.getElementById(elementID);
+			if (elem.movement) {
+				clearTimeout(elem.movement);
+			}
 			var xpos = parseInt( elem.style.left);  //字符串转换为整数
 			var ypos = parseInt( elem.style.top);
 			if ( xpos == final_x && ypos == final_y) {
@@ -76,7 +79,7 @@
 			elem.style.left = xpos + "px";
 			elem.style.top = ypos + "px";
 			var repeat = "moveElement('"+elementID+"', "+final_x+", "+final_y+", "+interval+")";
-			movement = setTimeout(repeat, interval);
+			elem.movement = setTimeout(repeat, interval);
 		}
 window.onload=prepareSlideshow();
 </script>
