--- a/moveElement/slide show.html
+++ b/moveElement/slide show.html
@@ -61,20 +61,25 @@
 			}
 			var xpos = parseInt( elem.style.left);  //字符串转换为整数
 			var ypos = parseInt( elem.style.top);
+			var dist = 0;
 			if ( xpos == final_x && ypos == final_y) {
 				return true;
 			}
 			if (xpos < final_x) {
-				xpos++;
+				dist = Math.ceil((final_x - xpos) / 10 ); //改进远距离滑动的速度
+				xpos = xpos + dist;
 			}
 			if (xpos > final_x) {
-				xpos--;
+				dist = Math.ceil(( xpos - final_x) / 10 );
+				xpos = xpos - dist;
 			}
 			if (ypos < final_y) {
-				ypos++;
+				dist = Math.ceil((final_y - ypos) / 10 );
+				ypos = ypos + dist;
 			}
 			if (ypos > final_y) {
-				ypos--;
+				dist = Math.ceil((ypos - final_y) / 10 );
+				ypos = ypos - dist;
 			}
 			elem.style.left = xpos + "px";
 			elem.style.top = ypos + "px";
