--- a/moveElement/slide show.html
+++ b/moveElement/slide show.html
@@ -38,8 +38,6 @@
 			if (!document.getElementById("preview")) return false;
 			var preview = document.getElementById("preview");
 			preview.style.position = "absolute";
-			preview.style.left = "0px";
-			preview.style.top = "0px";
 			var list = document.getElementById("linklist");
 			var links = list.getElementsByTagName("a");
 			links[0].onmouseover = function() {
@@ -58,6 +56,12 @@
 			var elem = document.getElementById(elementID);
 			if (elem.movement) {
 				clearTimeout(elem.movement);
+			}
+			if (!elem.style.left) {
+				elem.style.left = "0px";
+			}
+			if (!elem.style.ltop) {
+				elem.style.top = "0px";
 			}
 			var xpos = parseInt( elem.style.left);  //字符串转换为整数
 			var ypos = parseInt( elem.style.top);
