--- a/example/contact.html
+++ b/example/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Jay Skript and the Domsters</title>
-	
+	<link rel="stylesheet" type="text/css" href="styles/basic.css"/>
 </head>
 <body>
 	<header>
@@ -22,12 +22,13 @@
 					<a href="live.html">Live</a>
 				</li>
 				<li>
-					<a href="contact.html">Contact</a>
+					<a href="contact.html" class="here">Contact</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
 	<article>
 	</article>
+	<script src="scripts/global.js"></script>
 </body>
 </html>
