--- a/example/index.html
+++ b/example/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 	<header>
-		<img src="F:\素材图\318742-1406220I45283.jpg" alt="image">
+		<img src="E:\我的创作\zhongcai\example\images\318742-1406220I45283.jpg" alt="image">
 		<nav>
 			<ul>
 				<li>
-					<a href="index.html">Home</a>
+					<a href="index.html" class="here">Home</a>
 				</li>
 				<li>
 					<a href="about.html">About</a>
