--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img src="E:\我的创作\zhongcai\example\images\318742-1406220I45283.jpg" alt="image">
+		<img src="E:\MY\zhongcai\example\images\318742-1406220I45283.jpg" alt="image">
 		<nav>
 			<ul>
 				<li>
