--- a/example/about.html
+++ b/example/about.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<header>
+		<img src="E:\MY\zhongcai\example\images\318742-1406220I45283.jpg" alt="image">
 		<nav>
 			<ul>
 				<li>
