--- a/Vue/V-on .html
+++ b/Vue/V-on .html
@@ -23,6 +23,12 @@
 	<div id="example-4">
 		<button v-on:click="warn('Form cannot be submitted yet.', $event)">Submit</button>
 	</div>
+	<div id="counter-event-example">
+		<p>{{ total }}</p>
+		<button-counter v-on:increment="incrementTotal"></button-counter>
+		<button-counter v-on:increment="incrementTotal"></button-counter>
+	</div>
+	<!-- 子组件触发 -->
 	<script>
 		var example1 = new Vue({
 			el: '#example-1',
@@ -60,6 +66,31 @@
 				warn: function (message, event) {
 					if (event) event.preventDefault()
 						alert(message)
+				}
+			}
+		})
+		Vue.component('button-counter', {
+			template: '<button v-on:click="increment">{{ counter }}</button>',
+			data: function () {
+				return {
+					counter: 0
+				}
+			},
+			methods: {
+				increment: function () {
+					this.counter += 1
+					this.$emit('increment')
+				}
+			},
+		})
+		new Vue({
+			el: '#counter-event-example',
+			data: {
+				total: 0
+			},
+			methods: {
+				incrementTotal: function () {
+					this.total += 1
 				}
 			}
 		})
