--- a/Vue/V-model .html
+++ b/Vue/V-model .html
@@ -57,6 +57,12 @@
 		</select>
 		<span>Selected: {{ selected }}</span>
 	</div>
+	<div>
+		<h2>我是子组件的标题</h2>
+		<slot>
+			只有在没有要分发的内容时才会显示。
+		</slot>
+	</div>
 	<script>
 		var aa = new Vue({
 			el: '#aa',
