--- a/Vue/V-on .html
+++ b/Vue/V-on .html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="example-1">
-		<button v-on:click="counter += 1">增加 1</button>
+		<button v-on:click="counter += 1">增加 {{ counter }}</button>
 		<p>这个按钮被点击了 {{ counter }} 次。</p>
 	</div>
 	<!-- 点击事件 -->
@@ -29,6 +29,7 @@
 		<button-counter v-on:increment="incrementTotal"></button-counter>
 	</div>
 	<!-- 子组件触发 -->
+	
 	<script>
 		var example1 = new Vue({
 			el: '#example-1',
@@ -94,6 +95,7 @@
 				}
 			}
 		})
+		
 	</script>
 </body>
 </html>
