--- a/Vue/component.html
+++ b/Vue/component.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="app">
-	<counter  heading="aa" v-bind:cla=1></counter>
+	<counter  heading="aa" :cla='1'></counter>
 	<counter  heading="bb" v-bind:cla=2></counter>
 	<counter  heading="cc" v-bind:cla=3></counter>
 	<counter  heading="dd" v-bind:cla=4></counter>
@@ -20,10 +20,7 @@
 <template id="template">
 <div>
 	<h1> {{ heading }}</h1>
-	<button  v-on:click="count += 1" :class= "[cla==1?'btn btn-success' :'btn btn-default',
-	cla==2?'btn btn-primary' :'btn btn-defaul',
-	cla==3?'btn btn-info' :'btn btn-defaul',
-	cla==4?'btn btn-warning':'btn btn-defaul']"> {{ count }} </button>
+	<button  v-on:click="count += 1" :class="aaa"> {{ count }} </button>
 </div>
 </template>
 <script>
@@ -31,15 +28,29 @@
 		template: '#template',
 		props:['heading', 'cla'],
 		data: function () {
-    		return { count:0, };
+    		return { count:0 };
 		},
+computed:{
+	aaa: function(){
+		if (this.cla == 1) {
+			return "btn btn-primary"
+		}else if (this.cla == 2) {
+			return "btn btn-success"
+		}else if (this.cla == 3) {
+			return "btn btn-info"
+		}else if (this.cla == 4) {
+			return "btn btn-warning"
+		}else {
+			return "btn btn-danger"
+		}
+}
+}
 
-		
-		
+
 	});
 	new Vue({
 		el: '#app',
-		
+
 	})
 
 </script>
